- Fixed bug in ManualBeamFind.

0.1.55
------
- Added example for reading/writing ORSO model language file, working with
  ORSO dataset.
- refnx.dataset.OrsoDataset.setup_analysis() method creates a Structure,
  ReflectModel, and Objective, if there was an ORSO model language description
  of the interfacial model within the ORSO file.
- refnx.dataset.OrsoDataset.update_model() method updates the model
  description within the ORSO file from a given Structure.
- XRDML v2.0 file reader updates.

0.1.56
------
- added a Footprint class to correct for over-illumination of samples at low
  angles. This class is used by ReflectModelTL.

0.1.57
------
- rejig PolarisedReflectModel to calculate all four spin states with
 memoisation.
- create PolarisedReflectDatasets to hold four SpinChannel datasets.

0.1.58
------
- Loading an OrsoDataset into the GUI will also load the model, if it contains
  one.

0.1.59
------
- Add guide for how weighting is carried out in FAQ documentation.
- Structure.sld_profile; MagneticSlab can now be first or last Component,
  it's not mandatory for it to be a Slab.
- Improve Orso model_language ingestion.
- Fixed critical bug in LipidLeafletGuest. The overall weighting of guest and
  tails wasn't being done correctly.

0.1.60
------
- remove ffast math optimisations, weren't seem to be doing much.
- Changed parameterisation of LipidLeafletGuest to allow guest molecules in the
  head group region.
  WARNING: the parameterisation has now changed, there are extra parameters
  involved in setting up the Component, and the order of them has changed
  slightly.
- Fixed a bunch of sphinx warnings.

0.1.61
------
- Added absolute_phi keyword to LipidLeafletGuest. This allows one to
  parameterise the volume fraction of guest present in a layer in terms
  of an absolute volume fraction. This is useful when attempting to constrain
  the volume fraction of guest in the head and tail regions to be the same.

0.1.62
------